# sonic-buildcop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-dashboard.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-data-pipeline-deployment/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/01-monorepo-scaffolding/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-foundations/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02-staleness-model/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-core-api-infrastructure/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03-dashboard-ui/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-data-expansion/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/submodule-status/: pyproject.toml
apps/submodule-status/submodule_status/: collector.py  enrichment.py  renderer.py  staleness.py
apps/submodule-status/tests/: test_collector.py  test_enrichment.py  test_renderer.py  test_staleness.py
core/: pyproject.toml
libs/buildcop-common/: pyproject.toml
libs/buildcop-github/: pyproject.toml
libs/buildcop-github/buildcop_github/: __init__.py
scripts/: collector.py  renderer.py  staleness.py
submodule-status/: pyproject.toml
submodule-status/scripts/: collector.py  enrichment.py  renderer.py  staleness.py
submodule-status/src/sonic_submodule_status/: __init__.py  collector.py
submodule-status/templates/: dashboard.html
submodule-status/tests/: conftest.py  test_collector.py  test_enrichment.py  test_renderer.py  test_staleness.py
templates/: dashboard.html
tests/: conftest.py  test_collector.py  test_renderer.py
(+41 files in other folders)
