[project]
name = "buildcop-submodule-status"
version = "0.1.0"
description = "Submodule staleness monitoring dashboard for SONiC"
requires-python = ">=3.12"
dependencies = [
    "buildcop-common",
    "jinja2>=3.1",
    "requests>=2.31",
]

[project.scripts]
collect-submodules = "submodule_status.collector:main"
render-dashboard = "submodule_status.renderer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["submodule_status"]

[tool.uv.sources]
buildcop-common = { workspace = true }
